[gd_scene load_steps=4 format=2]

[ext_resource path="res://world/levels/Level1.gd" type="Script" id=1]
[ext_resource path="res://world/Matt1.tscn" type="PackedScene" id=2]

[sub_resource type="Curve2D" id=1]

_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1023.7, 3.41764, 0, 0, 0, 0, 1023.7, 598.468 )
}

[node name="Level1" type="Node"]
script = ExtResource( 1 )
Matt = ExtResource( 2 )

[node name="MattPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MattSpawnLocation" type="PathFollow2D" parent="MattPath"]
position = Vector2( 1023.7, 3.41764 )
rotation = 1.57078

[node name="MattTimer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="timeout" from="MattTimer" to="." method="_on_MattTimer_timeout"]
